welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: ')' expected but '}' found.
					{return false}}
                                                      ^noTriples:10: error: Unmatched closing brace '}' ignored here
 }
 ^